--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,17 @@
+.app {
+    text-align: center;
+    width: 400px;
+    height: 200px;
+}
+
 .counter-container {
     border: 1px solid black;
     border-radius: 20px;
     width: 400px;
     height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .time-container {
@@ -10,5 +19,8 @@
     border-radius: 20px;
     width: 400px;
     height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
