--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
-.app {
+.app-container {
     text-align: center;
-    width: 400px;
-    height: 200px;
+    color: white;
+    background-color: black;
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
 }
