--- a/src/components/widgets/counter/Counter.scss
+++ b/src/components/widgets/counter/Counter.scss
@@ -1,9 +1,19 @@
 .counter-container {
-    border: 1px solid black;
+    border: 3px dotted white;
     border-radius: 20px;
     width: 400px;
     height: 200px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: white;
+    margin: 10px;
+    button {
+        color: white;
+        background-color:black;
+        border: 2px solid white;
+        margin: 5px;
+        width: 100px;
+    }
 }
