--- a/src/components/widgets/time/Time.scss
+++ b/src/components/widgets/time/Time.scss
@@ -1,10 +1,11 @@
 .time-container {
-    border: 1px solid black;
+    border: 3px dotted white;
     border-radius: 20px;
     width: 400px;
     height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    color: white;
+    margin: 10px;
 }
