--- a/src/components/widgets/time/Time.scss
+++ b/src/components/widgets/time/Time.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     color: white;
     margin: 10px;
 }
